Add golangver allowing projects to pick go version
Adding a new golangver variable that is by default set to
golang110.
SMS overrides it with golang111.
Other projects don't need to do anything right now. The default
is golang110.

Issue-ID: CIMAN-216
Change-Id: Ia5a5a7dfbc94549726ed97ebc63e5562c19db513
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/jjb/aaf/aaf-sms.yaml
+++ b/jjb/aaf/aaf-sms.yaml
@@ -4,6 +4,7 @@
     project-name: 'aaf-sms'
     subproject: 'aaf-sms-client'
     path: 'sms-service/src'
+    golangver: 'golang111'
     jobs:
       - '{project-name}-{stream}-verify-golang'
       - '{project-name}-{stream}-merge-golang'
