Set policy/engine CLM to 4c 4g
The CLM job keeps failing, we think it is because the memory
and cpu requirements are randomly being chosen instead of
using 4c 4g that we established before.

Issue-ID: POLICY-1224
Change-Id: I050ac8afc992ee450ec5877c2ec4b60430794ee4
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-engine.yaml
+++ b/jjb/policy/policy-engine.yaml
@@ -48,3 +48,4 @@
     project-name: 'policy-engine'
     branch: 'master'
     mvn-settings: 'policy-engine-settings'
+    build-node: 'ubuntu1604-builder-4c-4g'
