Move to golang 1.11
Move k8s plugin to build with golang 1.11
This is a prerequisite for go mod support in the plugin

Issue-ID: MULTICLOUD-387
Change-Id: I1fe6a1b11fdee56b43af2703e5734a8715cbab63
Signed-off-by: Kiran Kamineni <kiran.k.kamineni@intel.com>

--- a/jjb/multicloud/multicloud-k8s.yaml
+++ b/jjb/multicloud/multicloud-k8s.yaml
@@ -3,6 +3,7 @@
     name: multicloud-k8s
     project-name: 'multicloud-k8s'
     path: 'src/k8splugin'
+    golangver: 'golang111'
     jobs:
       - '{project-name}-{stream}-{subproject}-verify-python'
       - '{project-name}-{stream}-verify-golang'
