Add arm64 16.04 packer templates
Add arm64 16.04 images for builder and docker.

Change-Id: I9f1f67fde3a7e0b11a7a58f159b625aa631e4d4e
Issue-ID: CIMAN-33
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/ci-management/ci-management-packer-jobs.yaml
+++ b/jjb/ci-management/ci-management-packer-jobs.yaml
@@ -16,6 +16,7 @@
       - centos-7
       - centos-7-arm64
       - ubuntu-16.04
+      - ubuntu-16.04-arm64
       - ubuntu-18.04-arm64
     templates: builder
 
@@ -34,6 +35,7 @@
 
     platforms:
       - ubuntu-16.04
+      - ubuntu-16.04-arm64
       - ubuntu-18.04-arm64
     templates: docker
 
