--- a/jjb/vid/vid-csit.yaml
+++ b/jjb/vid/vid-csit.yaml
@@ -5,9 +5,12 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'vid'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'healthCheck':
           trigger_jobs: '{project-name}-{stream}-docker-version-java-daily'
     robot-options: ''
-    branch: 'master'
