Add policy casablanca jobs
After branching on Friday, need to enable the CI/CD
jobs for Casablanca branch.
* Disable release on master from running
* Add CSIT for casablanca

Once Casablanca is officially released we will remove
those jobs.

Issue-ID: POLICY-1234
Change-Id: I296d6b93cb85faf72a0748e7331e5d8fdea2cdc2
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-csit.yaml
+++ b/jjb/policy/policy-csit.yaml
@@ -4,7 +4,11 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'policy'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: master
+      - 'casablanca':
+          branch: casablanca
     functionality:
       - 'health'
     trigger_jobs:
@@ -20,7 +24,11 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'policy'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: master
+      - 'casablanca':
+          branch: casablanca
     functionality:
       - 'apex-pdp'
     trigger_jobs:
@@ -34,7 +42,11 @@
       - '{project-name}-{stream}-verify-csit-{functionality}'
       - '{project-name}-{stream}-csit-{functionality}'
     project-name: 'policy'
-    stream: 'master'
+    stream:
+      - 'master':
+          branch: master
+      - 'casablanca':
+          branch: casablanca
     functionality:
       - 'distribution'
     trigger_jobs:
