Add policy casablanca jobs
After branching on Friday, need to enable the CI/CD
jobs for Casablanca branch.
* Disable release on master from running
* Add CSIT for casablanca

Once Casablanca is officially released we will remove
those jobs.

Issue-ID: POLICY-1234
Change-Id: I296d6b93cb85faf72a0748e7331e5d8fdea2cdc2
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-distribution.yaml
+++ b/jjb/policy/policy-distribution.yaml
@@ -12,13 +12,38 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
-          disabled: false
+          disabled: true
           build-node: ubuntu1604-docker-8c-8g
 
     project: 'policy/distribution'
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'policy-distribution-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: policy-distribution
+    project-name: 'policy-distribution'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java':
+          docker-pom: 'pom.xml'
+          mvn-params: '-P docker'
+          build-node: ubuntu1604-docker-8c-8g
+      - '{project-name}-{stream}-docker-version-java-daily':
+          docker-pom: 'pom.xml'
+          mvn-profile: 'docker'
+          mvn-params: '-Dmaven.test.skip=true'
+          disabled: false
+          build-node: ubuntu1604-docker-8c-8g
+
+    project: 'policy/distribution'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'policy-distribution-settings'
     files: '**'
     archive-artifacts: ''
