--- a/jjb/policy/policy-common.yaml
+++ b/jjb/policy/policy-common.yaml
@@ -6,12 +6,30 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily':
-          disabled: false
+          disabled: true
 
     project: 'policy/common'
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'policy-common-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: policy-common
+    project-name: 'policy-common'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily':
+          disabled: false
+
+    project: 'policy/common'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'policy-common-settings'
     files: '**'
     archive-artifacts: ''
