--- a/jjb/policy/policy-drools-applications.yaml
+++ b/jjb/policy/policy-drools-applications.yaml
@@ -6,12 +6,30 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily':
-          disabled: false
+          disabled: true
 
     project: 'policy/drools-applications'
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'policy-drools-applications-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: 'ubuntu1604-builder-4c-4g'
+
+- project:
+    name: policy-drools-applications
+    project-name: 'policy-drools-applications'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily':
+          disabled: false
+
+    project: 'policy/drools-applications'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'policy-drools-applications-settings'
     files: '**'
     archive-artifacts: ''
