Add policy casablanca jobs
After branching on Friday, need to enable the CI/CD
jobs for Casablanca branch.
* Disable release on master from running
* Add CSIT for casablanca

Once Casablanca is officially released we will remove
those jobs.

Issue-ID: POLICY-1234
Change-Id: I296d6b93cb85faf72a0748e7331e5d8fdea2cdc2
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-parent.yaml
+++ b/jjb/policy/policy-parent.yaml
@@ -6,11 +6,30 @@
       - '{project-name}-{stream}-verify-java'
       - '{project-name}-{stream}-merge-java'
       - '{project-name}-{stream}-release-version-java-daily'
+          disabled: true
 
     project: 'policy/parent'
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'policy-parent-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: policy-parent-casablanca
+    project-name: 'policy-parent-casablanca'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-java'
+      - '{project-name}-{stream}-release-version-java-daily'
+          disabled: false
+
+    project: 'policy/parent'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'policy-parent-settings'
     files: '**'
     archive-artifacts: ''
