Add policy casablanca jobs
After branching on Friday, need to enable the CI/CD
jobs for Casablanca branch.
* Disable release on master from running
* Add CSIT for casablanca

Once Casablanca is officially released we will remove
those jobs.

Issue-ID: POLICY-1234
Change-Id: I296d6b93cb85faf72a0748e7331e5d8fdea2cdc2
Signed-off-by: Pamela Dragosh <pdragosh@research.att.com>

--- a/jjb/policy/policy-apex-pdp.yaml
+++ b/jjb/policy/policy-apex-pdp.yaml
@@ -15,12 +15,39 @@
             -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
           script:
             !include-raw-escape: 'include-raw-docker-release.sh'
-          disabled: false
+          disabled: true
 
     project: 'policy/apex-pdp'
     stream:
       - 'master':
           branch: 'master'
+    mvn-settings: 'policy-apex-pdp-settings'
+    files: '**'
+    archive-artifacts: ''
+    build-node: ubuntu1604-builder-4c-4g
+
+- project:
+    name: policy-apex-pdp
+    project-name: 'policy-apex-pdp'
+    jobs:
+      - '{project-name}-{stream}-verify-java'
+      - '{project-name}-{stream}-merge-scm-mvn-script':
+          mvn-goals: 'clean deploy -B
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
+          script:
+            !include-raw-escape: 'include-raw-docker-merge.sh'
+      - '{project-name}-{stream}-docker-java-version-shell-daily':
+          docker-pom: 'pom.xml'
+          mvn-goals: 'clean deploy -B
+            -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=warn'
+          script:
+            !include-raw-escape: 'include-raw-docker-release.sh'
+          disabled: false
+
+    project: 'policy/apex-pdp'
+    stream:
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'policy-apex-pdp-settings'
     files: '**'
     archive-artifacts: ''
