Ensure portal-sdk-clm use a larger build node.
Added
      build-node: ubuntu1604-builder-4c-4g
to the portal-sdk-clm project in portal-sdk.yaml

Issue-ID: CIMAN-1
Change-Id: I787a19bd6032917f0a50468efee8492c5cbbb5c6
Signed-off-by: Bengt Thuree <bthuree@linuxfoundation.org>

--- a/jjb/portal-sdk/portal-sdk.yaml
+++ b/jjb/portal-sdk/portal-sdk.yaml
@@ -42,6 +42,7 @@
     jobs:
       - gerrit-maven-clm:
           mvn-params: '-f ecomp-sdk/pom.xml'
+    build-node: ubuntu1604-builder-4c-4g
     project: portal/sdk
     project-name: 'portal-sdk'
     branch: 'master'
