--- a/jjb/aai/aai-data-router.yaml
+++ b/jjb/aai/aai-data-router.yaml
@@ -11,6 +11,8 @@
           mvn-goals: 'docker:build'
     project: 'aai/data-router'
     stream:
+      - 'casablanca':
+          branch: 'casablanca'
       - 'master':
           branch: 'master'
     mvn-settings: 'aai-data-router-settings'
@@ -25,7 +27,7 @@
     build-node: ubuntu1604-builder-4c-4g
     project: 'aai/data-router'
     project-name: 'aai-data-router'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'aai-data-router-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
@@ -36,5 +38,5 @@
       - gerrit-maven-clm
     project: 'aai/data-router'
     project-name: 'aai-data-router'
-    branch: 'master'
+    branch: 'casablanca'
     mvn-settings: 'aai-data-router-settings'
