--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves-csit.yaml
@@ -7,8 +7,10 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'testsuites':
           trigger_jobs:
-            - 'dcaegen2-collectors-hv-ves-master-merge-java'
+            - '{project-name}-{stream}-merge-java'
     robot-options: ''
