--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     # apply to all jobs
     project: 'dcaegen2/collectors/hv-ves'
     mvn-settings: 'dcaegen2-collectors-hv-ves-settings'
@@ -31,6 +33,10 @@
       - gerrit-maven-clm
     project: dcaegen2/collectors/hv-ves
     project-name: 'dcaegen2-collectors-hv-ves'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     build-node: ubuntu1604-docker-8c-8g
     mvn-settings: 'dcaegen2-collectors-hv-ves-settings'
