--- a/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
+++ b/jjb/dcaegen2/dcaegen2-collectors-hv-ves.yaml
@@ -6,6 +6,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     # apply to all jobs
     project: 'dcaegen2/collectors/hv-ves'
     mvn-settings: 'dcaegen2-collectors-hv-ves-settings'
