Add jobs for dev cassandra only branch
Change-Id: I0179ab1805a197082ba3b4c177afaee8a66bbe09
Issue-ID: MUSIC-148
Signed-off-by: Tschaen, Brendan <ctschaen@att.com>

--- a/jjb/music/music.yaml
+++ b/jjb/music/music.yaml
@@ -16,6 +16,8 @@
           branch: 'master'
       - 'beijing':
           branch: 'beijing'
+      - 'dev-cassandra-only':
+          branch: 'dev-cassandra-only'
     mvn-settings: 'music-settings'
     files: '**'
     archive-artifacts: ''
