--- a/jjb/dcaegen2/dcaegen2-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-csit.yaml
@@ -22,9 +22,11 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'prh-testsuites'
     trigger_jobs:
       - 'dcaegen2-master-merge-java'
-      - 'dcaegen2-services-prh-master-merge-java'
+      - '{project-name}-{stream}-java'
     robot-options: ''
