Added Casablanca release PRH CI
Change-Id: Iac0cbce9903cf030f0390b35de753e1811e2006f
Issue-ID: CIMAN-201
Signed-off-by: wasala <przemyslaw.wasala@nokia.com>

--- a/jjb/dcaegen2/dcaegen2-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-csit.yaml
@@ -22,9 +22,11 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'prh-testsuites'
     trigger_jobs:
       - 'dcaegen2-master-merge-java'
-      - 'dcaegen2-services-prh-master-merge-java'
+      - '{project-name}-{stream}-merge-java'
     robot-options: ''
