set casablanca dcae jobs
Verify/merge/release jobs for repositorys branched
for Casablanca

Change-Id: Ie6968093c9786e6d565be557069eba110e778143
Signed-off-by: Vijay Venkatesh Kumar <vv770d@att.com>
Issue-ID: DCAEGEN2-772

--- a/jjb/dcaegen2/dcaegen2-csit.yaml
+++ b/jjb/dcaegen2/dcaegen2-csit.yaml
@@ -7,6 +7,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     functionality:
       - 'testsuites'
     trigger_jobs:
