--- a/jjb/portal/portal.yaml
+++ b/jjb/portal/portal.yaml
@@ -36,4 +36,5 @@
     project: portal
     project-name: 'portal'
     branch: 'master'
+    build-node: ubuntu1604-builder-4c-4g
     mvn-settings: 'portal-settings'
