Added Casablanca release for: - sonar - clm
Change-Id: Ib05b73ba5b66b49be919ff7da812de96c6697b5c
Issue-ID: CIMAN-201
Signed-off-by: pwielebs <piotr.wielebski@nokia.com>

--- a/jjb/dcaegen2/dcaegen2-services-prh.yaml
+++ b/jjb/dcaegen2/dcaegen2-services-prh.yaml
@@ -28,7 +28,11 @@
     build-node: ubuntu1604-docker-8c-8g
     project: 'dcaegen2/services/prh'
     project-name: 'dcaegen2-services-prh'
-    branch: 'master'
+    stream:
+      - 'master':
+          branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'dcaegen2-services-prh-settings'
     mvn-goals: 'clean install'
     mvn-opts: '-Xmx1024m -XX:MaxPermSize=256m'
@@ -40,5 +44,9 @@
     project: dcaegen2/services/prh
     build-node: ubuntu1604-docker-8c-8g
     project-name: 'dcaegen2-services-prh'
-    branch: 'master'
+    stream:
+        - 'master':
+            branch: 'master'
+        - 'casablanca':
+            branch: 'casablanca'
     mvn-settings: 'dcaegen2-services-prh-settings'
