Allow aai-docker to specify node
Allow {project-name}-{stream}-aai-docker-java-daily
to allow a specific build-node to be able to run these
jobs using the ARM architecture nodes.

All current projects using this job will stay unchaged and
will still run their builds on ubuntu1604-docker-8c-8g.

Change-Id: Iba61122be8645f5b8cb500c5bd823ff17d2a3fcb
Issue-ID: CIMAN-219
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aai/aai-chameleon.yaml
+++ b/jjb/aai/aai-chameleon.yaml
@@ -9,6 +9,7 @@
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'pom.xml'
           mvn-goals: 'clean package dockerfile:build dockerfile:push'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'aai/chameleon'
     stream:
       - 'casablanca':
