--- a/jjb/aaf/aaf-cadi.yaml
+++ b/jjb/aaf/aaf-cadi.yaml
@@ -35,6 +35,7 @@
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'sidecar/fproxy/pom.xml'
           mvn-goals: 'docker:build'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'aaf/cadi'
     docker-image-name: 'onap/fproxy'
     stream:
@@ -65,6 +66,7 @@
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'sidecar/rproxy/pom.xml'
           mvn-goals: 'docker:build'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'aaf/cadi'
     docker-image-name: 'onap/rproxy'
     stream:
@@ -95,6 +97,7 @@
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'sidecar/tproxy-config/pom.xml'
           mvn-goals: 'docker:build'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'aaf/cadi'
     docker-image-name: 'onap/tproxy-config'
     stream:
