--- a/jjb/aai/aai-gizmo.yaml
+++ b/jjb/aai/aai-gizmo.yaml
@@ -9,6 +9,7 @@
       - '{project-name}-{stream}-aai-docker-java-daily':
           pom: 'pom.xml'
           mvn-goals: 'docker:build'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'aai/gizmo'
     stream:
       - 'casablanca':
