--- a/jjb/vnfsdk/vnfsdk-refrepo.yaml
+++ b/jjb/vnfsdk/vnfsdk-refrepo.yaml
@@ -10,6 +10,7 @@
           pom: 'vnfmarket-be/deployment/docker/docker-refrepo/pom.xml'
           mvn-goals: 'docker:build'
           docker-image-name: 'onap/vnfsdk/refrepo'
+          build-node: ubuntu1604-docker-8c-8g
       - '{project-name}-{stream}-docker-version-java-daily':
           docker-pom: 'vnfmarket-be/deployment/docker/docker-postgres/pom.xml'
           mvn-profile: 'docker'
