Allow docker-java to specify node
Allow {project-name}-{stream}-docker-java-daily
to allow a specific build-node to be able to run these
jobs using the ARM architecture nodes.

All current projects using this job will stay unchaged and
will still run their builds on ubuntu1604-docker-8c-8g.

Change-Id: I36dd81f3de10a1f40d3c1aabe7d379475f78d6c8
Issue-ID: CIMAN-219
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/aai/aai-cacher.yaml
+++ b/jjb/aai/aai-cacher.yaml
@@ -10,6 +10,7 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'aai/cacher'
     stream:
       - 'master':
