--- a/jjb/sdc/sdc-sdc-workflow-designer.yaml
+++ b/jjb/sdc/sdc-sdc-workflow-designer.yaml
@@ -8,6 +8,7 @@
       - '{project-name}-{stream}-release-version-java-daily'
       - '{project-name}-{stream}-docker-java-daily':
           mvn-params: '-Dmaven.test.skip=true'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'sdc/sdc-workflow-designer'
     stream:
       - 'master':
