--- a/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
+++ b/jjb/vnfsdk/vnfsdk-dovetail-integration-python.yaml
@@ -25,7 +25,7 @@
           docker-pom: 'pom.xml'
           mvn-profile: 'docker'
           mvn-params: '-Dmaven.test.skip=true'
-
+          build-node: ubuntu1604-docker-8c-8g
 - project:
     name: vnfsdk-dovetail-integration-tox-sonar
     jobs:
