Allow docker-java to specify node
Allow {project-name}-{stream}-docker-java-properties-daily
to allow a specific build-node to be able to run these
jobs using the ARM architecture nodes.

All current projects using this job already run
on ubuntu1604-docker-8c-8g.

Change-Id: I4870fd36be3c66532be06079d181e2191c4ec72c
Issue-ID: CIMAN-219
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -787,7 +787,7 @@
 
     name: '{project-name}-{stream}-docker-java-properties-daily'
     project-type: freestyle
-    node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
     disabled: '{disabled}'
     properties:
       - infra-properties:
