Allow docker-java to specify node
Allow {project-name}-{stream}-docker-java-shell-daily
to allow a specific build-node to be able to run these
jobs using the ARM architecture nodes.

All current projects using this job will stay unchaged and
will still run their builds on ubuntu1604-docker-8c-8g.

Change-Id: Iba2032d80038d5b4d4ef3a73900c89866a896918
Issue-ID: CIMAN-219
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/jjb/global-templates-java.yaml
+++ b/jjb/global-templates-java.yaml
@@ -997,7 +997,7 @@
 
     name: '{project-name}-{stream}-docker-java-version-shell-daily'
     project-type: freestyle
-    node: 'ubuntu1604-docker-8c-8g'
+    node: '{build-node}'
     disabled: '{disabled}'
     properties:
       - infra-properties:
