--- a/jjb/msb/msb-discovery.yaml
+++ b/jjb/msb/msb-discovery.yaml
@@ -11,6 +11,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-discovery-docker-image.sh'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'msb/discovery'
     stream:
       - 'master':
