--- a/jjb/vfc/vfc-nfvo-db.yaml
+++ b/jjb/vfc/vfc-nfvo-db.yaml
@@ -17,3 +17,4 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-nfvo-db-docker-image.sh'
+          build-node: ubuntu1604-docker-8c-8g
