--- a/jjb/vfc/vfc-nfvo-multivimproxy.yaml
+++ b/jjb/vfc/vfc-nfvo-multivimproxy.yaml
@@ -17,7 +17,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-nfvo-multivimproxy-docker-image.sh'
-
+          build-node: ubuntu1604-docker-8c-8g
 - project:
     name: vfc-nfvo-multivimproxy-sonar
     jobs:
