--- a/jjb/oom/oom-registrator.yaml
+++ b/jjb/oom/oom-registrator.yaml
@@ -11,6 +11,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-registrator-docker-image.sh'
+          build-node: ubuntu1604-docker-8c-8g
     project: 'oom/registrator'
     stream:
       - 'master':
