--- a/jjb/vfc/vfc-nfvo-catalog.yaml
+++ b/jjb/vfc/vfc-nfvo-catalog.yaml
@@ -22,6 +22,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-nfvo-catalog-docker-image.sh'
+          build-node: ubuntu1604-docker-8c-8g
     files: '**'
     archive-artifacts: ''
     build-node: centos7-redis-4c-4g
