--- a/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-ems-java.yaml
@@ -21,6 +21,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-driver-ems-docker-image.sh'
+          build-node: ubuntu1604-docker-8c-8g
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
