--- a/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-docker-java.yaml
+++ b/jjb/vfc/vfc-nfvo-driver-vnfm-svnfm-docker-java.yaml
@@ -14,6 +14,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-nfvo-svnfm-driver-docker-image.sh'
+          build-node: ubuntu1604-docker-8c-8g
     files: '**'
     archive-artifacts: ''
     build-node: ubuntu1604-builder-4c-4g
