--- a/jjb/vfc/vfc-nfvo-lcm-java.yaml
+++ b/jjb/vfc/vfc-nfvo-lcm-java.yaml
@@ -16,6 +16,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-nfvo-lcm-docker-image.sh'
+          build-node: ubuntu1604-docker-8c-8g
     files: '**'
     archive-artifacts: ''
     build-node: centos7-redis-4c-4g
