--- a/jjb/vfc/vfc-nfvo-resmanagement.yaml
+++ b/jjb/vfc/vfc-nfvo-resmanagement.yaml
@@ -17,7 +17,7 @@
           mvn-goals: 'install'
           script:
             !include-raw-escape: 'build-nfvo-resmanagement-docker-image.sh'
-
+          build-node: ubuntu1604-docker-8c-8g
 - project:
     name: vfc-nfvo-resmanagement-sonar
     jobs:
