Remove Unauthorized Jenkins Job
Issue-ID: AAF-626
Change-Id: I2b94cb92efcb7834837e9fe9338b31a88c9aa7ab
Signed-off-by: Instrumental <jonathan.gathman@att.com>

--- a/jjb/aaf/aaf-authz.yaml
+++ b/jjb/aaf/aaf-authz.yaml
@@ -20,23 +20,24 @@
     files: '**'
     archive-artifacts: ''
 
-- project:
-    name: aaf-authz-arm64
-    project-name: 'aaf-authz-arm64'
-    jobs:
-      - '{project-name}-{stream}-docker-java-shell-daily':
-          mvn-goals: 'clean install'
-          settings: '{mvn-settings}'
-          script:
-            !include-raw-escape: 'build-aaf-docker-image.sh'
-          build-node: 'ubuntu1604-docker-arm64-4c-2g'
-    project: 'aaf/authz'
-    stream:
-      - 'master':
-          branch: 'master'
-    mvn-settings: 'aaf-authz-settings'
-    files: '**'
-    archive-artifacts: ''
+# This was not cleared with PTL, nor is it appropriate to add for CasaBlanca  See PTL before adding this kind of thing
+#- project:
+#    name: aaf-authz-arm64
+#    project-name: 'aaf-authz-arm64'
+#    jobs:
+#      - '{project-name}-{stream}-docker-java-shell-daily':
+#          mvn-goals: 'clean install'
+#          settings: '{mvn-settings}'
+#          script:
+#            !include-raw-escape: 'build-aaf-docker-image.sh'
+#          build-node: 'ubuntu1604-docker-arm64-4c-2g'
+#    project: 'aaf/authz'
+#    stream:
+#      - 'master':
+#          branch: 'master'
+#    mvn-settings: 'aaf-authz-settings'
+#    files: '**'
+#    archive-artifacts: ''
 
 - project:
     name: aaf-authz-sonar
