--- a/jjb/appc/appc-cdt.yaml
+++ b/jjb/appc/appc-cdt.yaml
@@ -11,6 +11,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'appc-cdt-settings'
     files: '**'
     archive-artifacts: ''
