--- a/jjb/appc/appc-parent.yaml
+++ b/jjb/appc/appc-parent.yaml
@@ -11,5 +11,7 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'appc-parent-settings'
     build-node: ubuntu1604-builder-2c-1g
