--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-aai-context-builder.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-aai-context-builder.yaml
@@ -14,6 +14,9 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
+
     mvn-settings: logging-analytics-pomba-pomba-aai-context-builder-settings
     files: '**'
     archive-artifacts: ''
