--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-audit-common.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-audit-common.yaml
@@ -10,6 +10,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: logging-analytics-pomba-pomba-audit-common-settings
     files: '**'
     archive-artifacts: ''
