--- a/jjb/logging-analytics/logging-analytics-pomba-pomba-context-aggregator.yaml
+++ b/jjb/logging-analytics/logging-analytics-pomba-pomba-context-aggregator.yaml
@@ -15,6 +15,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: logging-analytics-pomba-pomba-context-aggregator-settings
     files: '**'
     archive-artifacts: ''
