--- a/jjb/logging-analytics/logging-analytics.yaml
+++ b/jjb/logging-analytics/logging-analytics.yaml
@@ -14,6 +14,8 @@
     stream:
       - 'master':
           branch: 'master'
+      - 'casablanca':
+          branch: 'casablanca'
     mvn-settings: 'logging-analytics-settings'
     files: '**'
     archive-artifacts: ''
